# splatter-mcp-app

./: .gitignore  CONTRIBUTING.md  README.md  biome.json  index.ts  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  skills-lock.json  tsconfig.build.json  tsconfig.json
.agent/skills/chatgpt-app-builder/evals/: skill.json
.agent/skills/mcp-builder/evals/: architecture.json  widgets.json
.claude/skills/mcp-builder/evals/: implementation.json  (+1 more)
resources/: styles.css
resources/product-search-result/: types.ts  widget.tsx
resources/product-search-result/components/: Accordion.tsx  AccordionItem.tsx  Carousel.tsx  CarouselItem.tsx  CarouselSkeleton.tsx
resources/product-search-result/hooks/: useCarouselAnimation.ts
resources/splat-upload/: styles.css  types.ts  widget.tsx
resources/splat-viewer/: styles.css  types.ts  widget.tsx
resources/splat-viewer/trajectory/: TrajectoryPlayer.ts  types.ts
resources/splat-viewer/viewer/: GaussianViewer.ts
services/sharp-inference/: README.md  modal_app.py  pyproject.toml
services/sharp-inference/app/: __init__.py  main.py  modal_adapter.py  schemas.py
src/server/bootstrap/: registerSplatFeatures.ts
src/server/routes/: artifacts.ts  imageGenerationJobs.ts  uploads.ts  widgetDiagnostics.ts
src/server/services/: chatgptFileResolver.ts  modalInferenceClient.ts  plyMetadataSummary.ts  plySplatValidation.ts  pythonInferenceClient.ts  splatLogger.ts  tempArtifactStore.ts
src/server/tools/: generateSplatFromImageTool.ts  openPlyUploadTool.ts  viewPlySplatTool.ts
src/server/types/: splat.ts
(+11 files in other folders)
