[project]
name = "sharp-inference-service"
version = "0.1.0"
description = "FastAPI adapter service for Modal ML-SHARP splat generation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
	"fastapi>=0.115.0",
	"httpx>=0.27.0",
	"modal>=1.3.3",
	"uvicorn[standard]>=0.30.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[dependency-groups]
dev = [
    "ty>=0.0.18",
]
